# decoding-attention

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  cache.py  compose.yaml  main.py  pyproject.toml
.streamlit/: config.toml
chapter1/: chapter1.ipynb  chapter1.py  overview.excalidraw  section1.py  section2.py  section3.py  section4.py  section5.py
chapter2/: chapter2.py  overview.excalidraw  section1.py  section2.py  section3.py  section4.py  section5.py
