[project]
name = "learn-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "torch>=2.7.0",
    "torchao>=0.11.0",
    "torchtune>=0.6.1",
    "transformers>=4.52.3",
]
