[project]
name = "learn-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "jaxtyping>=0.3.2",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "torchao>=0.11.0",
    "torchtune>=0.6.1",
    "transformers>=4.52.3",

]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
