[project]
name = "decoding-attention"
version = "0.1.0"
description = "An Interactive Guide of Transformers for Software Engineers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = ["taskipy>=1.14.1"]
[tool.taskipy.tasks]
dev = "exec streamlit run main.py --server.headless=true --server.runOnSave=true"
start = "exec streamlit run main.py"
deploy = "docker compose up --build -d"
